--- a/3. Landmark Detection and Tracking.ipynb
+++ b/3. Landmark Detection and Tracking.ipynb
@@ -595,7 +595,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: (Write your answer here.)"
+    "**Answer**: \n",
+    "    - 实际的 Landmark 位置为:  [14, 83], [42, 50], [34, 57], [48, 29], [20, 40]\n",
+    "    - 估计的 Landmark 位置为: \n",
+    "                            [14.204, 83.262]\n",
+    "                            [41.888, 49.912]\n",
+    "                            [33.793, 56.776]\n",
+    "                            [47.461, 29.327]\n",
+    "                            [19.858, 40.255]\n",
+    "\n",
+    "    如果移动更多次,Landmark 的估计值将会更加准确. 或者噪声降低时, Landmark的估计值也会更加准确.\n",
+    "    "
    ]
   },
   {
